change edit page routes and fix username overlap

--- a/client/src/Routes/UserPage/UserPage.css
+++ b/client/src/Routes/UserPage/UserPage.css
@@ -49,7 +49,5 @@
 }
 
 .icon {
-    margin-right: 1rem;
+    margin-right: 0.5rem;
 }
-
-.discord {}
